fix broken styles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -77,8 +77,8 @@ body {
 }
 
 main {
-    display: grid;
-    column-gap: 3rem;
+    display: flex;
+    flex-direction: column;
     row-gap: 2rem;
     margin: 2rem;
 }
@@ -276,6 +276,11 @@ main {
     order: 2;
 }
 
+.span-2 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+}
+
 /* Citations */
 
 .citations {
@@ -310,7 +315,6 @@ a:hover {
 
 .container {
     grid-column-start: 2;
-    order: 2;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -336,8 +340,10 @@ a:hover {
     body {
     }
     main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
         width: 800px;
-        grid-template-columns: auto;
     }
 
 
